--- a/styles/globals.css
+++ b/styles/globals.css
@@ -62,6 +62,22 @@ modules, extending theme perhaps ????
     padding-top: 0.625rem;
 }
 
+.genesis-p2 > h1 {
+    font-size: 1.5rem; 
+    font-family: var(--nunito-font);
+    font-style: normal;
+    line-height: 100%;
+    font-weight: 700;
+    padding-top: 0.625rem;
+}
+
+.genesis-p2 > p {
+    font-size: 1.375rem; 
+    font-family: var(--nunito-font);
+    font-style: normal;
+    line-height: 100%;
+    padding-top: 0.625rem;
+}
 
 
 
