Terminal integration for genesis-pt2 and transacting-2

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -91,3 +91,8 @@ modules, extending theme perhaps ????
       @apply bg-base-blue;
     }
 }
+
+.react-terminal-line {
+    white-space: unset!important;
+    line-break: anywhere;
+}
