--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,9 +10,36 @@ html {
     background-image: url('https://saving-satoshi.s3.amazonaws.com/main-image.png');
 }
 
-.ch1-background-img {
+.ch1-background {
     background-image: url('https://saving-satoshi.s3.amazonaws.com/ch2.png');
+    background-repeat: no-repeat;
+    background-size: cover;
 }
+
+.blur {
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    backdrop-filter: blur(75px);
+    background: rgba(46, 64, 90, 0.75);
+}
+
+/*
+.react-terminal {
+    background-image: url('https://saving-satoshi.s3.amazonaws.com/ch2.png');
+    display: block;
+}
+
+.react-terminal-wrapper .react-terminal-light {
+    background-image: url('https://saving-satoshi.s3.amazonaws.com/ch2.png');
+    display: block;
+}
+*/
+
+div.react-terminal-wrapper.react-terminal-light {
+    background: rgba(46, 64, 90, 0.75);
+    backdrop-filter: blur(75px);
+    color: #1a1e24;
+  }
+
 
 
 /* TODO check if there's a better way to add
