--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,24 +22,6 @@ html {
     background: rgba(46, 64, 90, 0.75);
 }
 
-/*
-.react-terminal {
-    background-image: url('https://saving-satoshi.s3.amazonaws.com/ch2.png');
-    display: block;
-}
-
-.react-terminal-wrapper .react-terminal-light {
-    background-image: url('https://saving-satoshi.s3.amazonaws.com/ch2.png');
-    display: block;
-}
-*/
-
-div.react-terminal-wrapper.react-terminal-light {
-    background: rgba(46, 64, 90, 0.75);
-    backdrop-filter: blur(75px);
-    color: #1a1e24;
-  }
-
 
 
 /* TODO check if there's a better way to add
@@ -119,7 +101,54 @@ modules, extending theme perhaps ????
     }
 }
 
-.react-terminal-line {
+/* Overriding terminal styles */
+div.react-terminal-wrapper.react-terminal-light {
+    background: transparent;
+    display: block;
+    width: max-content;
+    font-family: var(--space-mono-font);
+    font-size: 18px;
+}
+
+div.react-terminal-wrapper:after {
+    content: '';
+    display: none;
+}
+
+div.react-terminal-input[data-terminal-prompt]:before {
+    content: '>';
+    color: white;
+    opacity: 50%;
+  }
+
+div.react-terminal-wrapper:before {
+    content: '';
+    display: none;
+    top: 15px;
+    left: 15px;
+    width: 0px;
+    height: 0px;
+    border-radius: 0%;
+    /* A little hack to display the window buttons in one pseudo element. */
+    background: #120102;
+    -webkit-box-shadow: 25px 0 0 #f4c025, 50px 0 0 #3ec930;
+            box-shadow: 25px 0 0 #f4c025, 50px 0 0 #3ec930;
+  }
+
+  div.react-terminal-wrapper:focus-within .react-terminal-active-input:after {
+    content: '▋';
+    color: white;
+    opacity: 50%;
+    font-family: monospace;
+    font-family: var(--space-mono-font);
+    -webkit-animation: blink 1s infinite;
+            animation: blink 1s infinite;
+  }
+
+
+div.react-terminal-line {
     white-space: unset!important;
     line-break: anywhere;
+    color: white;
+    opacity: 50%;
 }
