--- a/styles/globals.css
+++ b/styles/globals.css
@@ -105,9 +105,11 @@ modules, extending theme perhaps ????
 div.react-terminal-wrapper.react-terminal-light {
     background: transparent;
     display: block;
-    width: max-content;
+    width: auto;
     font-family: var(--space-mono-font);
     font-size: 18px;
+    width: 50vw;
+
 }
 
 div.react-terminal-wrapper:after {
@@ -124,15 +126,7 @@ div.react-terminal-input[data-terminal-prompt]:before {
 div.react-terminal-wrapper:before {
     content: '';
     display: none;
-    top: 15px;
-    left: 15px;
-    width: 0px;
-    height: 0px;
-    border-radius: 0%;
-    /* A little hack to display the window buttons in one pseudo element. */
-    background: #120102;
-    -webkit-box-shadow: 25px 0 0 #f4c025, 50px 0 0 #3ec930;
-            box-shadow: 25px 0 0 #f4c025, 50px 0 0 #3ec930;
+
   }
 
   div.react-terminal-wrapper:focus-within .react-terminal-active-input:after {
