Lots of visual tweaks
Lots of little things on the home, about, chapter, and various content pages. Did not get through the last few content pages though.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -71,6 +71,13 @@ modules, extending theme perhaps ????
     padding-top: 0.625rem;
 }
 
+.genesis > pre,
+.genesis-p2 > pre {
+    padding: 10px;
+    border: 1px dashed white;
+    margin-top: 15px;
+}
+
 .genesis-p2 > h1 {
     font-size: 1.5rem; 
     font-family: var(--nunito-font);
@@ -102,6 +109,10 @@ modules, extending theme perhaps ????
 }
 
 /* Overriding terminal styles */
+div.react-terminal-wrapper {
+    padding: 20px;
+}
+
 div.react-terminal-wrapper.react-terminal-light {
     background: transparent;
     display: block;
