Introduce themes using CSS variables
Chapters have unique background colors that get picked up by certain UI elements. This PR introduces a basic system using a back variable that gets changed by appending a theme class to the current page.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --back: #324760;
+}
+
+.-theme-purple {
+  --back: #4D2859;
+}
+
+.-theme-red {
+  --back: #6F272D;
+}
+
+.-theme-brown {
+  --back: #524445;
+}
+
 html {
   scroll-behavior: smooth;
 }
