--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,20 +3,21 @@
 @tailwind utilities;
 
 :root {
-  --back: #324760;
+  --back: 50, 71, 96; /* Theme background color (#324760) */
+  --green: 40, 177, 35; /* Success color (#28B123) */
   --terminal-output: #3DCFEF;
 }
 
 .-theme-purple {
-  --back: #4D2859;
+  --back: 77, 40, 89; /* #4D2859 */
 }
 
 .-theme-red {
-  --back: #6F272D;
+  --back: 111, 39, 45; /* #6F272D */
 }
 
 .-theme-brown {
-  --back: #524445;
+  --back: 82, 68, 69; /* #524445 */
 }
 
 html {
@@ -118,7 +119,7 @@ modules, extending theme perhaps ????
 
 @layer base {
   body {
-    @apply bg-base-blue;
+    @apply bg-back;
   }
 }
 
