add class to handle terminal challenges

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -139,3 +139,8 @@ div.react-terminal-active-input {
   outline: #243142;
   border-radius: 4px;
 }
+
+:not(.terminal) ~ .statusbar-bottom {
+  position: fixed;
+  bottom: 0;
+}
