--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,8 +3,8 @@
 @tailwind utilities;
 
 :root {
-  --back: 50, 71, 96; /* Theme background color (#324760) */
-  --green: 40, 177, 35; /* Success color (#28B123) */
+  --back: #324760; /* Theme background color (#324760) */
+  --green: #28b123; /* Success color (#28B123) */
   --terminal-output: #3DCFEF;
   --input-text: #6e7d92;
 }
