correct root style variables

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,15 +10,15 @@
 }
 
 .-theme-purple {
-  --back: 77, 40, 89; /* #4D2859 */
+  --back: rgba(77, 40, 89); /* #4D2859 */
 }
 
 .-theme-red {
-  --back: 111, 39, 45; /* #6F272D */
+  --back: rgba(111, 39, 45); /* #6F272D */
 }
 
 .-theme-brown {
-  --back: 82, 68, 69; /* #524445 */
+  --back: rgba(82, 68, 69); /* #524445 */
 }
 
 html {
