--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,8 +5,8 @@
 :root {
   --back: 50, 71, 96; /* Theme background color (#324760) */
   --green: 40, 177, 35; /* Success color (#28B123) */
-  --terminal-output: #3DCFEF;
-  --incorrect-answer: #EF960B;
+  --terminal-output: #3dcfef;
+  --incorrect-answer: #ef960b;
   --input-text: #6e7d92;
 }
 
@@ -127,8 +127,9 @@ div.react-terminal-active-input {
   color: white;
 }
 
-.overlay-complete > .correct, .overlay-complete {
-  color: #28B123
+.overlay-complete > .correct,
+.overlay-complete {
+  color: #28b123;
 }
 
 .incorrect {
