--- a/styles/globals.css
+++ b/styles/globals.css
@@ -148,3 +148,12 @@ div.react-terminal-active-input {
   outline: #243142;
   border-radius: 4px;
 }
+
+/* Chapter Default themes */
+.chapter-1-numbers {
+  background-image: linear-gradient(180deg, #243654d9 0%, #3D5163d9 100%), url('/assets/images/chapter-1-background.png');
+}
+
+.chapter-2-square {
+  background-image: linear-gradient(180deg, #7b1810d9 0%, #432a43d9 100%), url('/assets/images/chapter-2-background.png');
+}
