--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,6 +9,7 @@
   --terminal-bg: rgba(61, 207, 239, 0.25);
   --incorrect-answer: #ef960b;
   --input-text: #6e7d92;
+  --dynamic-height: 100vh;
 }
 
 .-theme-purple {
@@ -148,6 +149,68 @@ div.react-terminal-active-input {
   background-color: #243142;
   outline: #243142;
   border-radius: 4px;
+}
+
+.terminal {
+  --header-height: 64px;
+  --language-tabs-height: 40px;
+  --status-bar-height: 56px;
+  --mobile-tabs-height: 48px;
+
+  height: calc(
+    var(--dynamic-height) - var(--header-height) - var(--mobile-tabs-height) -
+      var(--language-tabs-height) - var(--status-bar-height)
+  );
+}
+
+@media (min-width: 768px) {
+  .terminal {
+    height: 218px;
+  }
+}
+
+.terminal::-webkit-scrollbar {
+  width: 14px;
+}
+
+.terminal::-webkit-scrollbar-track:vertical {
+  background-color: transparent;
+  border-left: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+.terminal::-webkit-scrollbar-track:horizontal {
+  background-color: transparent;
+  border-top: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+.terminal::-webkit-scrollbar-corner {
+  background-color: transparent;
+  border-top: 1px solid rgba(255, 255, 255, 0.3);
+  border-left: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+.terminal::-webkit-scrollbar-thumb {
+  background: rgba(255, 255, 255, 0);
+}
+
+.terminal:hover::-webkit-scrollbar-thumb {
+  background: rgba(255, 255, 255, 0.2);
+}
+
+.terminal > .output {
+  @apply font-mono text-xs text-white;
+}
+
+.code-editor {
+  height: calc(100vh - 70px - 48px);
+}
+
+@media (min-width: 768px) {
+  .code-editor {
+    display: grid;
+    height: calc(100vh - 70px);
+    grid-template-rows: 40px auto auto 56px;
+  }
 }
 
 @keyframes fadeIn {
