--- a/styles/globals.css
+++ b/styles/globals.css
@@ -232,9 +232,9 @@ div.react-terminal-active-input {
 }
 
 .fade-in {
-  animation: fadeIn 0.4s ease-in-out;
+  animation: fadeIn 0.3s ease-in-out forwards;
 }
 
 .fade-out {
-  animation: fadeOut 0.4s ease-in-out;
+  animation: fadeOut 0.3s ease-in-out forwards;
 }
