Update: Change 1000 block to 100 block (#519)
* Mining stall fix

* Update: change 1000 block to 100 block

* Fade in fade out for 4th step

* Random block found time

* Copy changes for 100 blocks

* Copy changes

* Naming change for icons

* Time interval change

* Fix text flickering

* Fix: fill-in-mode forwards

* Fix: Flickering & Icon size

* Remove old component

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -233,9 +233,9 @@ div.react-terminal-active-input {
 }
 
 .fade-in {
-  animation: fadeIn 0.3s ease-in-out;
+  animation: fadeIn 0.3s ease-in-out forwards;
 }
 
 .fade-out {
-  animation: fadeOut 0.3s ease-in-out;
+  animation: fadeOut 0.3s ease-in-out forwards;
 }
