feat: make bg-prototype for lesson step

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -239,3 +239,7 @@ div.react-terminal-active-input {
 .fade-out {
   animation: fadeOut 0.3s ease-in-out forwards;
 }
+
+.height-minus-nav {
+  height: calc(100vh - 70px);
+}
