use css var instead of dynamic metadata

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,6 +11,7 @@
   --incorrect-answer: #ef960b;
   --input-text: #6e7d92;
   --dynamic-height: 100vh;
+  --CH3SOL1-bg: #411e4f;
 }
 
 .-theme-purple {
@@ -242,4 +243,8 @@ div.react-terminal-active-input {
 
 .height-minus-nav {
   height: calc(100vh - 70px);
+}
+
+.solo-1-bg {
+  background: var(--CH3SOL1-bg)
 }
