finalize bg variables

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,6 +12,8 @@
   --input-text: #6e7d92;
   --dynamic-height: 100vh;
   --CH3SOL1-bg: #411e4f;
+  --CH3SOL1-gradient-start: #3C1843;
+  --CH3SOL1-gradient-stop: #45235a;
 }
 
 .-theme-purple {
@@ -245,6 +247,11 @@ div.react-terminal-active-input {
   height: calc(100vh - 70px);
 }
 
-.solo-1-bg {
+.solo-1-theme {
+  background: linear-gradient(315deg, var(--CH3SOL1-gradient-start), var(--CH3SOL1-gradient-stop))
+}
+
+.solo-1-secondary-theme {
   background: var(--CH3SOL1-bg)
 }
+
