Chapter 3 Challenge 4 (Splitting Rewards) (#606)
* WIP feat: add splitting rewards draft

* WIP: frontend data saving

* feat: add logic for previousLessonData

* feat: add intro page

* feat: add breakdown percentages

* faster blocks

* save and load to api

* chore: prettier

* antagonist array

* feat: add no-data catch

* fix: noData is optional

* fix: noData as param not fixed

* fix: add button when noData is false

* feat: add translations and match styles

* feat: change partial solution math

* fix: imagePosition is optional

* chore: add ?

* feat: add headding and use new default reward split

* refactor: don't use backend for chapter-3 challenges

* resolve feedback

* fix: text width for copy

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,7 +12,7 @@
   --input-text: #6e7d92;
   --dynamic-height: 100vh;
   --CH3SOL1-bg: #411e4f;
-  --CH3SOL1-gradient-start: #3C1843;
+  --CH3SOL1-gradient-start: #3c1843;
   --CH3SOL1-gradient-stop: #45235a;
 }
 
@@ -244,19 +244,23 @@ div.react-terminal-active-input {
 }
 
 .height-minus-nav {
-   height: calc(100vh - 70px);
- }
+  height: calc(100vh - 70px);
+}
 
 .solo-1-bg {
-  background: var(--CH3SOL1-bg)
+  background: var(--CH3SOL1-bg);
 }
 
 .solo-1-theme {
-  background: linear-gradient(315deg, var(--CH3SOL1-gradient-start), var(--CH3SOL1-gradient-stop))
+  background: linear-gradient(
+    315deg,
+    var(--CH3SOL1-gradient-start),
+    var(--CH3SOL1-gradient-stop)
+  );
 }
 
 .solo-1-secondary-theme {
-  background: var(--CH3SOL1-bg)
+  background: var(--CH3SOL1-bg);
 }
 
 
