--- a/styles/globals.css
+++ b/styles/globals.css
@@ -271,5 +271,5 @@ div.react-terminal-active-input {
 
 .auto-scroll::-webkit-scrollbar-thumb {
    border-radius: 4px;
-   background-color: white;
+   background-color: rgba(255, 255, 255, 0.25);
 }
