brighten on hover

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -273,3 +273,9 @@ div.react-terminal-active-input {
    border-radius: 4px;
    background-color: rgba(255, 255, 255, 0.25);
 }
+
+.auto-scroll::-webkit-scrollbar-thumb:hover {
+   border-radius: 4px;
+   background-color: rgba(255, 255, 255, 0.5);
+}
+
