--- a/styles/globals.css
+++ b/styles/globals.css
@@ -263,19 +263,24 @@ div.react-terminal-active-input {
   background: var(--CH3SOL1-bg);
 }
 
+.auto-scroll {
+  padding-bottom: 15px;
+}
 
 .auto-scroll::-webkit-scrollbar {
   -webkit-appearance: none;
-   width: 1px;
+  background-color: rgba(0, 0, 0, 0.25);
+  height: 5px;
+  border-radius: 4px;
 }
 
 .auto-scroll::-webkit-scrollbar-thumb {
-   border-radius: 4px;
-   background-color: rgba(255, 255, 255, 0.25);
+  border-radius: 4px;
+  background-color: rgba(255, 255, 255, 0.25);
 }
 
 .auto-scroll::-webkit-scrollbar-thumb:hover {
-   border-radius: 4px;
-   background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 4px;
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
