--- a/styles/globals.css
+++ b/styles/globals.css
@@ -235,12 +235,24 @@ div.react-terminal-active-input {
   }
 }
 
+@keyframes focusPing {
+  75%,
+  100% {
+    transform: scale(6);
+    opacity: 0;
+  }
+}
+
 .fade-in {
   animation: fadeIn 0.3s ease-in-out forwards;
 }
 
 .fade-out {
   animation: fadeOut 0.3s ease-in-out forwards;
+}
+
+.animate-focus-ping {
+  animation: focusPing 6s cubic-bezier(0, 0, 0.2, 1) infinite;
 }
 
 .height-minus-nav {
@@ -283,4 +295,3 @@ div.react-terminal-active-input {
   border-radius: 4px;
   background-color: rgba(255, 255, 255, 0.5);
 }
-
