--- a/styles/globals.css
+++ b/styles/globals.css
@@ -304,6 +304,10 @@ div.react-terminal-active-input {
   background-color: rgba(255, 255, 255, 0.5);
 }
 
+.tooltip-height {
+  max-height: calc(100vh - 127px);
+}
+
 .toggle-switch {
   position: relative;
   display: inline-block;
