ch.4-2 link to hash lib docs

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -125,6 +125,10 @@ div.react-terminal-active-input {
   color: white;
 }
 
+.preline {
+  white-space: pre-line;
+}
+
 .underscore {
   color: #ffffff59;
 }
