--- a/styles/globals.css
+++ b/styles/globals.css
@@ -364,3 +364,24 @@ input:checked + .slider:before {
   -ms-transform: translateX(20px);
   transform: translateX(20px);
 }
+
+.arrow-box::before,
+.arrow-box::after {
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 0;
+  border-style: solid;
+}
+
+.arrow-box::before {
+  @apply top-1/2 left-full transform -translate-y-1/2;
+  border-width: 29px 0 29px 20px;
+  border-color: transparent transparent transparent #6a717f;
+}
+
+.arrow-box::after {
+  @apply top-1/2 -left-4 transform -translate-y-1/2;
+  border-width: 29px 0 29px 20px;
+  border-color: #6a717f #6a717f #6a717f transparent;
+}
