--- a/styles/globals.css
+++ b/styles/globals.css
@@ -407,3 +407,6 @@ input:checked + .slider:before {
   border-color: #6a717f40 #6a717f40 #6a717f40 transparent;
 }
 
+.clone + div {
+  display: none !important;
+}
