feat: use dynamic vertical height

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,7 +10,7 @@
   --terminal-bg: rgba(61, 207, 239, 0.25);
   --incorrect-answer: #ef960b;
   --input-text: #6e7d92;
-  --dynamic-height: 100vh;
+  --dynamic-height: 100dvh;
   --CH3SOL1-bg: #411e4f;
   --CH3SOL1-gradient-start: #3c1843;
   --CH3SOL1-gradient-stop: #45235a;
@@ -210,22 +210,22 @@ div.react-terminal-active-input {
 }
 
 .code-editor {
-  height: calc(100vh - 70px - 56px);
+  height: calc(100dvh - 70px - 56px);
 }
 .read-only-editor-button {
-  height: calc(100vh - 70px - 56px);
+  height: calc(100dvh - 70px - 56px);
 }
 .read-only-editor {
-  height: calc(100vh - 70px);
+  height: calc(100dvh - 70px);
 }
 @media (min-width: 768px) {
   .code-editor {
     display: grid;
-    height: calc(100vh - 70px);
+    height: calc(100dvh - 70px);
     grid-template-rows: 48px auto 204px 67px;
   }
   .read-only-editor-button {
-    height: calc(100vh - 70px - 48px - 67px);
+    height: calc(100dvh - 70px - 48px - 67px);
   }
 }
 
@@ -268,7 +268,11 @@ div.react-terminal-active-input {
 }
 
 .height-minus-nav {
-  height: calc(100vh - 70px);
+  height: calc(100dvh - 70px);
+}
+
+.max-height-minus-nav {
+  max-height: calc(100dvh - 70px);
 }
 
 .solo-1-bg {
@@ -309,7 +313,7 @@ div.react-terminal-active-input {
 }
 
 .tooltip-height {
-  max-height: calc(100vh - 127px);
+  max-height: calc(100dvh - 127px);
 }
 
 .toggle-switch {
