--- a/styles/globals.css
+++ b/styles/globals.css
@@ -364,3 +364,7 @@ input:checked + .slider:before {
   -ms-transform: translateX(20px);
   transform: translateX(20px);
 }
+
+.hero-image-position {
+  object-position: 50% 34%;
+}
