--- a/styles/globals.css
+++ b/styles/globals.css
@@ -396,3 +396,26 @@ input:checked + .slider:before {
 .hero-image-position {
   object-position: 50% 34%;
 }
+
+.boss-bg {
+  position: relative;
+  overflow: hidden;
+}
+
+.boss-bg::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to left, #93EFFFBA, #93EFFF00);
+  opacity: 0;
+  transition: opacity 1s ease-out 100ms;
+}
+
+.boss-bg:hover::before {
+  opacity: 1;
+}
+
+
