--- a/styles/globals.css
+++ b/styles/globals.css
@@ -397,24 +397,39 @@ input:checked + .slider:before {
   object-position: 50% 34%;
 }
 
-.boss-bg {
+.boss-bg-wrapper {
   position: relative;
+  width: 223px;
+  height: 74px;
   overflow: hidden;
 }
 
-.boss-bg::before {
-  content: '';
+.boss-bg {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(to left, #93EFFFBA, #93EFFF00);
-  opacity: 0;
-  transition: opacity 1s ease-out 100ms;
+  transition: opacity 2s ease-out 100ms;
 }
 
-.boss-bg:hover::before {
+.top-bg {
+  background: linear-gradient(to right, #93EFFFBA, #93EFFF00);
+  z-index: 2;
+  opacity: 1;
+}
+
+.bottom-bg {
+  background: linear-gradient(to left, #93EFFFBA, #93EFFF00);
+  z-index: 1;
+  opacity: 0;
+}
+
+.boss-bg-wrapper:hover .top-bg {
+  opacity: 0;
+}
+
+.boss-bg-wrapper:hover .bottom-bg {
   opacity: 1;
 }
 
