--- a/styles/globals.css
+++ b/styles/globals.css
@@ -210,12 +210,12 @@ div.react-terminal-active-input {
 }
 
 .challenge-container {
-  height: calc(100dvh - 70px - 48px - 56px)
+  height: calc(100dvh - 70px - 48px - 56px);
 }
 
 @media (min-width: 768px) {
   .challenge-container {
-    height: calc(100dvh - 70px)
+    height: calc(100dvh - 70px);
   }
 }
 
@@ -240,12 +240,12 @@ div.react-terminal-active-input {
 }
 
 .transaction-challenge-container {
-  max-height: calc(100dvh - 70px - 56px - 65px - 48px)
+  max-height: calc(100dvh - 70px - 56px - 65px - 48px);
 }
 
 @media (min-width: 768px) {
   .transaction-challenge-container {
-    max-height: calc(100dvh - 70px - 56px - 65px)
+    max-height: calc(100dvh - 70px - 56px - 65px);
   }
 }
 
