--- a/styles/globals.css
+++ b/styles/globals.css
@@ -32,6 +32,35 @@ html {
   scroll-behavior: smooth;
 }
 
+::-webkit-scrollbar {
+  width: 6px;
+  height: 8px;
+}
+
+::-webkit-scrollbar:hover {
+  background: #3d3d3d;
+  height: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: var(--lightestgrey);
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888888;
+  border-radius: 5px;
+  height: 6px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #676767;
+  border: 0;
+}
+
+::-webkit-scrollbar-thumb:horiontal:active {
+  background: #676767;
+}
+
 .fix-grow-issue [data-nextjs-scroll-focus-boundary] {
   flex-grow: 1;
   display: flex;
